add Compose button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 <header class="container-fluid">
   <app-header></app-header>
 </header>
-<nav>
-  <app-nav></app-nav>
-</nav>
-<section>
-  <app-message-list></app-message-list>
+<section class="row">
+  <nav class="col-3">
+    <app-nav></app-nav>
+  </nav>
+  <article class="col-9">
+    <app-message-list></app-message-list>
+  </article>
 </section>
