--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,5 @@
 div.row {
-    padding: 8px 0px;
+    padding: 8px 0;
 }
 .logo {
     // background-image: url(https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_dark_2x.png);
@@ -34,7 +34,7 @@ div.row {
 }
 
 .search-icon {
-    margin: 0px 15px 0px;
+    margin: 0 15px 0;
 }
 
 div.search-container > input + svg {
