--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,1 +1,5 @@
-<p>nav works!</p>
+<div class="row">
+    <div class="button-container">
+        <div class="compose">Compose</div>
+    </div>
+</div>
