add sidebar content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   <app-header></app-header>
 </header>
 <section class="row">
-  <nav class="col-3">
+  <aside class="col-3">
     <app-nav></app-nav>
-  </nav>
-  <article class="col-9">
+  </aside>
+  <section class="col-9">
     <app-message-list></app-message-list>
-  </article>
+  </section>
 </section>
