--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -3,3 +3,6 @@
         <div class="compose">Compose</div>
     </div>
 </div>
+<nav class="nav nav-pills nav-fill">
+    <app-tags></app-tags>
+</nav>
