update tags component * remove <span> from 'svg' and 'image' templates since there is on behavior change per template * changed 'iconURL' template reference variable to 'image'

--- a/src/app/tags/tags.component.html
+++ b/src/app/tags/tags.component.html
@@ -1,9 +1,9 @@
 <a class="nav-link nav-item text-reset" href="#" *ngFor="let tag of tags | async">
-    <ng-container *ngTemplateOutlet="tag.iconURL? iconURL : svg; context: {$implicit: tag}"></ng-container>
-</a>
-<ng-template #iconURL let-tag>
-    <img class="tag-icons" src="{{tag.iconURL}}">
+    <ng-container *ngTemplateOutlet="tag.iconURL? image : svg; context: {$implicit: tag}"></ng-container>
     <span>{{tag.name}}</span>
+</a>
+<ng-template #image let-tag>
+    <img class="tag-icons" src="{{tag.iconURL}}">
 </ng-template>
 
 <ng-template #svg let-tag>
@@ -13,5 +13,4 @@
             d="M17.63 5.84C17.27 5.33 16.67 5 16 5L5 5.01C3.9 5.01 3 5.9 3 7v10c0 1.1.9 1.99 2 1.99L16 19c.67 0 1.27-.33 1.63-.84L22 12l-4.37-6.16z">
         </path>
     </svg>
-    <span>{{tag.name}}</span>
 </ng-template>
