add functionality for displaying a list of emails and viewing a email in detail * add Email Service to read emails from json files and retrieve email by id * add functionality select email from list * add message detail view * add email model * format message detail view * add routing * add typescript compiler options for handling importing json files as a module

--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,1 +1,11 @@
-<p>message works!</p>
+<a class="text-reset" [routerLink]="['/details', message.id]" href="#">
+    <div class="row">
+        <div class="col" [ngClass]="{unread: !message.read}">{{message.sender}}</div>
+        <div class="col text-truncate"><span
+                [ngClass]="{unread: !message.read}">{{message.subject}}</span><span>{{message.body}}</span>
+        </div>
+        <div class="col" [ngClass]="{unread: !message.read}"><span class="date">{{message.date | date:'MMM dd'}}</span>
+        </div>
+
+    </div>
+</a>
