--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   <app-header></app-header>
 </header>
 <section class="row">
-  <aside class="col-3">
+  <aside class="col-2">
     <app-nav></app-nav>
   </aside>
-  <section class="col-9">
-    <app-message-list></app-message-list>
+  <section class="col-10">
+    <router-outlet></router-outlet>
   </section>
 </section>
