--- a/src/app/message-list/message-list.component.html
+++ b/src/app/message-list/message-list.component.html
@@ -1,1 +1,3 @@
-<p>message-list works!</p>
+<div class="row" *ngFor="let message of messages">
+    <app-message class="col-12" [message]="message"></app-message>
+</div>
