--- a/src/app/message-list/message-list.component.html
+++ b/src/app/message-list/message-list.component.html
@@ -1,3 +1,3 @@
-<div class="row" *ngFor="let message of messages">
+<div class="row" *ngFor="let message of messages | filterMsgs: selectedTag">
     <app-message class="col-12" [message]="message"></app-message>
 </div>
